# estimator

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  conanfile.txt.save
bindpy/: CMakeLists.txt  bind_ekf.cpp  bind_ekf.h  bind_kf.cpp  bind_kf.h  bind_models.cpp  bind_models.h  bindings.cpp
cmake/: FindGTest.cmake  Findpybind11.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
scripts/: Untitled.ipynb  arr2ltx.py  kalman-filter.ipynb  main.py  pythonJupiter.ipynb  test_ekf_est_2dTarget.ipynb  test_kf_est_2dTarget.ipynb  test_kf_est_2dTarget.py  test_kf_est_control.py
scripts/.ipynb_checkpoints/: kalman-filter-checkpoint.ipynb  test_ekf_est_2dTarget-checkpoint.ipynb  test_kf_est_2dTarget-checkpoint.ipynb
src/: CMakeLists.txt  CMakeLists.txt.autosave  bindings.cpp  ekf.h  kf.h  models.h  utils.h
test/: CMakeLists.txt  test.cpp  test_crossover_angle.cpp  test_ekf.cpp
